--- a/zimui/index.html
+++ b/zimui/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maps2ZIM PoC</title>    
+    <title>Maps2ZIM</title>    
   </head>
   <body>
-    <h2 id="title">Maps2Zim PoC</h2>
+    <h2 id="title">Maps2Zim</h2>
     <div id="map"></div>
     <script type="module" src="./main.js"></script>
   </body>
