Implement minimal maplibre map + fix formatting, linting

--- a/zimui/index.html
+++ b/zimui/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://openlayers.org/favicon.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maps2ZIM</title>    
+    <title>Maps2ZIM</title>
   </head>
   <body>
     <h2 id="title">Maps2Zim</h2>
