Store last location in local storage, per ZIM name to avoid confusions between various maps

--- a/zimui/index.html
+++ b/zimui/index.html
@@ -12,9 +12,14 @@
   </head>
   <body>
     <div id="map">
-      <button id="coordsButton" class="coords-button" title="Show map coordinates and zoom level">
-        📍
-      </button>
+      <div class="button-container">
+        <button id="resetButton" class="reset-button" title="Reset to default center and zoom">
+          🏠
+        </button>
+        <button id="coordsButton" class="coords-button" title="Show map coordinates and zoom level">
+          📍
+        </button>
+      </div>
       <div id="coordsPopover" class="coords-popover">
         <div class="coords-content">
           <p class="coords">
