--- a/zimui/index.html
+++ b/zimui/index.html
@@ -13,10 +13,18 @@
   <body>
     <div id="map">
       <div class="button-container">
-        <button id="resetButton" class="reset-button" title="Reset to default center and zoom">
+        <button
+          id="resetButton"
+          class="reset-button"
+          title="Reset to default center and zoom"
+        >
           🏠
         </button>
-        <button id="coordsButton" class="coords-button" title="Show map coordinates and zoom level">
+        <button
+          id="coordsButton"
+          class="coords-button"
+          title="Show map coordinates and zoom level"
+        >
           📍
         </button>
       </div>
@@ -25,7 +33,7 @@
           <p class="coords">
             Lat: <span id="latitude">0.00</span><br />
             Lon: <span id="longitude">0.00</span><br />
-            Zoom:</strong> <span id="zoomLevel">11</span>
+            Zoom: <span id="zoomLevel">11</span>
           </p>
         </div>
       </div>
