Allow to switch between map styles in the UI, and persist choice

--- a/zimui/index.html
+++ b/zimui/index.html
@@ -13,6 +13,17 @@
   <body>
     <div id="map">
       <div class="button-container">
+        <select
+          id="styleSelector"
+          class="style-selector"
+          title="Switch map style"
+        >
+          <option value="bright">Bright</option>
+          <option value="liberty">Liberty</option>
+          <option value="fiord">Fiord</option>
+          <option value="positron">Positron</option>
+          <option value="dark">Dark</option>
+        </select>
         <button
           id="resetButton"
           class="reset-button"
