Add an about page

--- a/zimui/index.html
+++ b/zimui/index.html
@@ -38,6 +38,13 @@
         >
           📍
         </button>
+        <button
+          id="aboutButton"
+          class="about-button"
+          title="About this map"
+        >
+          ?
+        </button>
       </div>
       <div id="coordsPopover" class="coords-popover">
         <div class="coords-content">
